# tfg-2324

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
docs/config/: iladata_before.ila
docs/resource_utilization/: rsrc-10x1g-128B.txt  rsrc-1x1g-128B.txt  rsrc-3x1g-128B.txt  rsrc-4x1g-128B.txt  rsrc-5x1g-128B.txt  rsrc-7x1g-128B.txt  rsrc-9x1g-128B.txt
docs/resource_utilization/1x1G-NB/: rsrc-1x1g-1024B.txt  rsrc-1x1g-128B.txt  rsrc-1x1g-1522B.txt  rsrc-1x1g-512B.txt  rsrc-1x1g-64B.txt
docs/resource_utilization/1x1G-nB/: rsrc-1x1g-256B.txt
docs/resource_utilization/1xNG-1024B/: rsrc-1x10G-1024B.txt  rsrc-1x2G-1024B.txt  rsrc-1x3G-1024B.txt  rsrc-1x4G-1024B.txt  rsrc-1x5G-1024B.txt  rsrc-1x6G-1024B.txt  rsrc-1x7G-1024B.txt  rsrc-1x8G-1024B.txt  rsrc-1x9G-1024B.txt
docs/resource_utilization/Nx1G-128B/: rsrc-2x1g-128B.txt  rsrc-6x1g-128B.txt  rsrc-8x1g-128B.txt
example/ZCU102/fpga/: README.md
example/ZCU102/fpga/fpga/: Makefile
example/ZCU102/fpga/lib/: verilog-axi  verilog-axis  verilog-ethernet  verilog-uart  xfcp
example/ZCU102/fpga/rtl/: fpga_core.v
rtl/: axil_reg_if_rd.v  axis_fifo.v  basic_counter.v  conf_iface.v  packet_builder.v  packet_manager.v  packetgen.v  packetgen_512.v  packetgen_64.v  pm_counter.v  switch_simple_fifo.v
rtl/lib/: arbiter.v  axil_reg_if.v  axil_reg_if_wr.v  axis_fifo_adapter.v  priority_encoder.v
tests/conf_iface/: Makefile  test_conf_iface.py
tests/packetgen/: Makefile  test_packetgen.py
tests/packetgen_512/: Makefile  test_packetgen_512.py
tests/packetgen_64/: Makefile  test_packetgen_64.py
(+2 files in other folders)
