[tool.poetry]
name = "tfg-2324"
version = "0.1.0"
description = ""
authors = ["p-ariza <pablo.ariza@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cocotb = "^1.8.1"
cocotbext-axi = "^0.1.24"
pytest = "^8.0.0"
cocotb-test = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
